tests/fail/elaboration/unification/mismatch/fun-literal-input-ann.snap
stdout = ''
stderr = '''
error: type mismatch, expected: Type, got A
  ┌─ tests/fail/elaboration/unification/mismatch/fun-literal-input-ann.fathom:3:19
  │
3 │ fun A => fun (a : Type) => a : fun (A : Type) -> A -> A
  │                   ^^^^

error: cannot find `a` in scope
  ┌─ tests/fail/elaboration/unification/mismatch/fun-literal-input-ann.fathom:3:28
  │
3 │ fun A => fun (a : Type) => a : fun (A : Type) -> A -> A
  │                            ^ unbound name

'''
